Refactor services to use constructor injection and replace System.out with SLF4J logging